--- a/navbar.html
+++ b/navbar.html
@@ -88,7 +88,7 @@
     </nav>
 
     <section id="home">
-      <h1>Home</h1>
+      <h1>Home Page</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
         perferendis adipisci inventore qui impedit quo aut amet dicta ipsa
